--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <div id="app"></div>
-    <p>テストです</p>
+    <p>テストですよよ</p>
     <p>
       <script src="src/index.js"></script>
     </p>
